--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "MimiCMS",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon"
   },
   "keywords": [],
-  "author": "",
+  "author": "Zachey",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.4.0",
@@ -16,5 +16,8 @@
     "express": "^4.18.2",
     "mongoose": "^7.2.1",
     "mysql": "^2.18.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22"
   }
 }
