--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon",
-    "prettier": "prettier .prettierrc ./ --write"
+    "prettier": "prettier ./ --write"
   },
   "keywords": [],
   "author": "Zachey",
@@ -15,7 +15,6 @@
     "body-parser": "^1.20.2",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mongoose": "^7.2.1",
     "mysql": "^2.18.1"
   },
   "devDependencies": {
