--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,10 @@ FRONTEND_PORT = 8000
 # Configuration
 NAME = 'MimiCMS'
 LOGO = 'img/logo.png'
+DISCORD_SERVER_ID = ''
+TG_CHANNEL = '' # example shadowseekcsgo/5
+
+# Slides
+SLIDE_1 = ''
+SLIDE_2 = ''
+SLIDE_3 = ''
