fix null errors

--- a/.env.example
+++ b/.env.example
@@ -1,22 +1,31 @@
-# Database (MySql)
-DB_HOST = '127.0.0.1' 
-DB_USER = 'root'
+# MySQL configuration
+DB_HOST = ''
+DB_USER = ''
 DB_PASSWORD = ''
-DB_NAME = 'db_name'
+DB_NAME = ''
 
-# Backend
-BACKEND_PORT = 3000
-
-# Frontend
-FRONTEND_PORT = 8000
-
-# Configuration
-NAME = 'MimiCMS'
-LOGO = 'img/logo.png'
-DISCORD_SERVER_ID = ''
-TG_CHANNEL = '' # example shadowseekcsgo/5
+# WebServer configuration
+PORT = ''
+DOMAIN = ''
 
 # Slides
 SLIDE_1 = ''
 SLIDE_2 = ''
 SLIDE_3 = ''
+
+# Main configuration
+NAME = '' # Name server
+LOGO = '' # Path to the logo
+CURRENCY = '' # Currency symbol
+STEAM_API_KEY = '' # Web API key for Steam
+SECRET = '' # Generate a random string (min length is 32 characters)
+LANG = '' # Set the language for CMS
+SERVER_DESCRIPTION = ''
+
+# Banner on main page
+TG_CHANNEL = '' # example: https://t.me/shadowseekcsgo/5
+DISCORD_SERVER_ID = 
+
+# Tickets
+TG_BOT_TOKEN = '' # Telegram token for bot to send tickets
+TG_GROUP_ID = '' # Group to send tickets
