--- a/package.json
+++ b/package.json
@@ -27,11 +27,14 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "express-winston": "^4.2.0",
     "moment": "^2.29.4",
     "mysql": "^2.18.1",
     "mysqldump": "^3.2.0",
     "passport": "^0.6.0",
-    "passport-steam": "^1.0.17"
+    "passport-steam": "^1.0.17",
+    "request": "^2.88.2",
+    "request-ip": "^3.3.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.22",
