--- a/.env.example
+++ b/.env.example
@@ -22,6 +22,9 @@ SECRET = '' # Generate a random string (min length is 32 characters)
 LANG = '' # Set the language for CMS
 SERVER_DESCRIPTION = ''
 
+# Server configuration
+SERVER_IP = ''
+
 # Banner on main page
 TG_CHANNEL = '' # example: https://t.me/shadowseekcsgo/5
 DISCORD_SERVER_ID = 
