--- a/.env.example
+++ b/.env.example
@@ -19,15 +19,15 @@ LOGO = '' # Path to the logo
 CURRENCY = '' # Currency symbol
 STEAM_API_KEY = '' # Web API key for Steam
 SECRET = '' # Generate a random string (min length is 32 characters)
-LANG = '' # Set the language for CMS
 SERVER_DESCRIPTION = ''
 
 # Server configuration
 SERVER_IP = ''
+SERVER_PORT = ''
 
-# Banner on main page
-TG_CHANNEL = '' # example: https://t.me/shadowseekcsgo/5
-DISCORD_SERVER_ID = 
+# Social btn on main page
+TG_LINK = '' # example: https://t.me/shadowseekcsgo/5
+DISCORD_LINK = ''
 
 # Tickets
 TG_BOT_TOKEN = '' # Telegram token for bot to send tickets
