--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,8 @@
   "emmet.includeLanguages": {
     "ejs": "html"
   },
-  "html.format.templating": true
+  "html.format.templating": true,
+  "cSpell.enableFiletypes": [
+    "!javascript"
+  ]
 }
