--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "passport": "^0.6.0",
     "passport-steam": "^1.0.17",
     "request": "^2.88.2",
-    "request-ip": "^3.3.0"
+    "request-ip": "^3.3.0",
+    "steam-webapi": "^0.6.5"
   },
   "devDependencies": {
     "nodemon": "^2.0.22",
