--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "nodemon",
     "prettier": "prettier ./ --write",
-    "backup": "node scripts/backup.js"
+    "backup": "node scripts/backup.js",
+    "build": "node build"
   },
   "keywords": [
     "CMS",
@@ -22,25 +23,26 @@
     "@fabricio-191/valve-server-query": "^4.1.9",
     "axios": "^1.4.0",
     "body-parser": "^1.20.2",
-    "child_process": "^1.0.2",
     "chokidar": "^3.5.3",
     "dotenv": "^16.1.4",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
-    "express-winston": "^4.2.0",
     "moment": "^2.29.4",
     "mysql": "^2.18.1",
     "mysqldump": "^3.2.0",
     "passport": "^0.6.0",
     "passport-steam": "^1.0.17",
     "request": "^2.88.2",
-    "request-ip": "^3.3.0",
     "steam-webapi": "^0.6.5"
   },
   "devDependencies": {
+    "@vercel/ncc": "^0.36.1",
+    "child_process": "^1.0.2",
+    "fs-extra": "^11.1.1",
     "nodemon": "^2.0.22",
     "prettier": "^2.8.8",
-    "winston": "^3.9.0"
+    "winston": "^3.9.0",
+    "express-winston": "^4.2.0"
   }
 }
