--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "axios": "^1.4.0",
     "body-parser": "^1.20.2",
     "chokidar": "^3.5.3",
+    "compression": "^1.7.4",
     "dotenv": "^16.1.4",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
@@ -39,10 +40,10 @@
   "devDependencies": {
     "@vercel/ncc": "^0.36.1",
     "child_process": "^1.0.2",
+    "express-winston": "^4.2.0",
     "fs-extra": "^11.1.1",
     "nodemon": "^2.0.22",
     "prettier": "^2.8.8",
-    "winston": "^3.9.0",
-    "express-winston": "^4.2.0"
+    "winston": "^3.9.0"
   }
 }
