--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "nodemon",
     "prettier": "prettier ./ --write",
     "backup": "node scripts/backup",
-    "build": "node build",
+    "build": "node scripts/build",
     "start": "node dist/index"
   },
   "keywords": [
