--- a/installer/package.json
+++ b/installer/package.json
@@ -1,27 +1,10 @@
 {
-	"name": "MimiCMSinstaller",
+	"name": "mimicms_installer",
 	"description": "Installer for MimiCMS",
-	"version": "0.0.1",
+	"version": "0.0.2",
 	"license": "MIT",
-	"bin": {
-		"MimiCMS-installer": "index.js",
-		"mimicms": "index.js"
-	},
-	"author": {
-		"name": "Zachey",
-		"email": "zachey@bk.ru",
-		"url": "https://github.com/zachey01"
-	},
-	"keywords": [
-		"MimiCMS-installer",
-		"Zachey"
-	],
-	"files": [
-		"index.js",
-		"utils"
-	],
 	"scripts": {
-		"format": "prettier --write \"./**/*.{js,json}\""
+		"start": "mimicms"
 	},
 	"dependencies": {
 		"chalk": "^4.1.2",
@@ -31,8 +14,5 @@
 		"cli-meow-help": "^3.1.0",
 		"cli-welcome": "^2.2.2",
 		"meow": "^9.0.0"
-	},
-	"devDependencies": {
-		"prettier": "^3.0.0"
 	}
 }
