--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 		"ejs": "^3.1.9",
 		"express": "^4.18.2",
 		"express-session": "^1.17.3",
+		"highlight.js": "^11.8.0",
 		"jsonwebtoken": "^9.0.1",
 		"moment": "^2.29.4",
 		"mysql": "^2.18.1",
