--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,6 +1,4 @@
 {
 	"recommendations": [
-		"DigitalBrainstem.javascript-ejs-support",
-		"dirt-lxiv.language-csgo-cfg"
-	]
+		"DigitalBrainstem.javascript-ejs-support"	]
 }
