--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"crypto-js": "^4.1.1",
 		"ejs": "^3.1.9",
 		"express": "^4.18.2",
+		"express-minify": "^1.0.0",
 		"express-session": "^1.17.3",
 		"express-winston": "^4.2.0",
 		"highlight.js": "^11.8.0",
