--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,4 +1,3 @@
 {
-	"recommendations": [
-		"DigitalBrainstem.javascript-ejs-support"	]
+	"recommendations": ["DigitalBrainstem.javascript-ejs-support"]
 }
