--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 		"dev": "npx nodemon",
 		"format": "npx prettier ./ --write",
 		"backup": "node scripts/backup",
-		"start": "npx pm2 start app.js --name mimicms --watch",
+		"start": "npx pm2 start app.js --name mimicms --watch startup",
 		"stop": "npx pm2 stop mimicms"
 	},
 	"keywords": [
